logs/django-mips.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_mips-0.3.2.egg-info'...
Listing './lib/python3.5/site-packages/mips'...
Listing './lib/python3.5/site-packages/mips/data_manager'...
Compiling './lib/python3.5/site-packages/mips/data_manager/import_methods.py'...
***   File "./lib/python3.5/site-packages/mips/data_manager/import_methods.py", line 45
    print 'Function {} objects/imported/updated: {}/{}/{} rows into database'.format(self.method_name,
                                                                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mips/data_manager/sample_data'...
Listing './lib/python3.5/site-packages/mips/example'...
Compiling './lib/python3.5/site-packages/mips/example/examples.py'...
***   File "./lib/python3.5/site-packages/mips/example/examples.py", line 25
    print mip
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mips/example/examples2.py'...
***   File "./lib/python3.5/site-packages/mips/example/examples2.py", line 38
    print mip, mip.mip_sequence
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mips/migrations'...
Compiling './lib/python3.5/site-packages/mips/settings.py'...
***   File "./lib/python3.5/site-packages/mips/settings.py", line 10
    print "No production setting, load defaults"
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
